[tool.poetry]
name = "problems-practice"
version = "0.1.0"
description = "Practice problems workspace - Python dependencies"
authors = ["eakanath_r <er001.me@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.34.0"
aiohttp = "^3.13.5"
rate-limiter = { path = "rate-limiter", develop = true }

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.3"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"
